exports[`Carousel should apply 200px carousel width when element has 200px width 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 200px;\')
    .slide(style=\'visibility: visible;\')
    .slide(style=\'visibility: visible;\')
    .slide(style=\'visibility: visible;\')
// 
.pagination
  .dot-container
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
"
`;

exports[`Carousel should apply custom slides per page when responsive param provided 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
// 
// 
"
`;

exports[`Carousel should apply default carousel width when element has 0 width 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
// 
// 
"
`;

exports[`Carousel should be unable to advance backward by default 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
// 
// 
"
`;

exports[`Carousel should be unable to advance forward by default (no slides added) 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
// 
// 
"
`;

exports[`Carousel should begin autoplaying when option specified 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
    .slide(style=\'visibility: hidden;\')
    .slide(style=\'visibility: hidden;\')
// 
.pagination
  .dot-container
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
"
`;

exports[`Carousel should decrease current slide number by 1 when advance page backward is called 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
    .slide(style=\'visibility: hidden;\')
    .slide(style=\'visibility: hidden;\')
// 
.pagination
  .dot-container
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
"
`;

exports[`Carousel should fall back to default slides per page when no responsive param provided 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
    .slide(style=\'visibility: hidden;\')
    .slide(style=\'visibility: hidden;\')
    .slide(style=\'visibility: hidden;\')
// 
.pagination
  .dot-container
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
"
`;

exports[`Carousel should increase current slide number by 1 when advance page is called 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
    .slide(style=\'visibility: hidden;\')
    .slide(style=\'visibility: hidden;\')
// 
.pagination
  .dot-container
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
"
`;

exports[`Carousel should increase current slide number by 1 when advance page is called with a non "backward" argument 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
    .slide(style=\'visibility: hidden;\')
    .slide(style=\'visibility: hidden;\')
// 
.pagination
  .dot-container
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
"
`;

exports[`Carousel should mount successfully 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
// 
// 
"
`;

exports[`Carousel should register 0 slides when 0 slides are added to the slots 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
// 
// 
"
`;

exports[`Carousel should register 3 slides when 3 slides are added to the slots 1`] = `
".carousel-wrapper
  .carousel-inner(style=\'width: 0px;\')
    .slide(style=\'visibility: hidden;\')
    .slide(style=\'visibility: hidden;\')
    .slide(style=\'visibility: hidden;\')
// 
.pagination
  .dot-container
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .dot(style=\'margin-top: 20px; padding: 10px;\')
      .dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
"
`;

exports[`Carousel should unmount successfully 1`] = `
".carousel-wrapper
  .carousel-inner
// 
// 
"
`;
